--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-200.3KB/s(Youtube:不良林), server: zh01lv5ge05.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇳🇱 荷兰-151.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇨🇳 中国-16.83MB/s(Youtube:不良林), server: hk-route-12369-9.dukou.info, port: 8309, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-9.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-482.4KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-438.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇳🇱 荷兰-233.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 乌克兰-1001.1KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇯🇵 日本-2.91MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-10.10MB/s(Youtube:不良林), server: hk10-gray.dukou.info, port: 8310, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk10-gray.dukou.info, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1003.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1009.0KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 阿联酋-305.7KB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 阿联酋-427.6KB/s(Youtube:不良林), server: 217.138.193.6, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-791.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇨🇭 瑞士-1.03MB/s(Youtube:不良林), server: ch1.nodegz.top, port: 444, type: trojan, password: bac11225-fd19-4b02-98ac-af5a1f55d63b, sni: ch1.nodegz.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
-      - 乌克兰-1001.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
+      - 阿联酋-305.7KB/s(Youtube:不良林)
+      - 阿联酋-427.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
-      - 乌克兰-1001.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
+      - 阿联酋-305.7KB/s(Youtube:不良林)
+      - 阿联酋-427.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
-      - 乌克兰-1001.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
+      - 阿联酋-305.7KB/s(Youtube:不良林)
+      - 阿联酋-427.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
-      - 乌克兰-1001.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
+      - 阿联酋-305.7KB/s(Youtube:不良林)
+      - 阿联酋-427.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
-      - 乌克兰-1001.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
+      - 阿联酋-305.7KB/s(Youtube:不良林)
+      - 阿联酋-427.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
-      - 乌克兰-1001.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
+      - 阿联酋-305.7KB/s(Youtube:不良林)
+      - 阿联酋-427.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
-      - 乌克兰-1001.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
+      - 阿联酋-305.7KB/s(Youtube:不良林)
+      - 阿联酋-427.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
