--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-482.4KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.91MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-10.10MB/s(Youtube:不良林), server: hk10-gray.dukou.info, port: 8310, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk10-gray.dukou.info, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1003.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1009.0KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 阿联酋-305.7KB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 阿联酋-427.6KB/s(Youtube:不良林), server: 217.138.193.6, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-791.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇨🇭 瑞士-1.03MB/s(Youtube:不良林), server: ch1.nodegz.top, port: 444, type: trojan, password: bac11225-fd19-4b02-98ac-af5a1f55d63b, sni: ch1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林), server: 213.183.53.221, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇳🇱 荷兰-249.8KB/s(Youtube:不良林), server: 213.183.51.172, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇯🇵 日本-176.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 乌克兰-1.07MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇳🇱 荷兰-727.3KB/s(Youtube:不良林), server: 213.183.51.172, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇳🇱 荷兰-466.3KB/s(Youtube:不良林), server: 213.183.51.172, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇳🇱 荷兰-318.4KB/s(Youtube:不良林), server: 213.183.51.172, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇳🇱 荷兰-796.1KB/s(Youtube:不良林), server: 213.183.59.218, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇳🇱 荷兰-347.5KB/s(Youtube:不良林), server: 213.183.59.218, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇳🇱 荷兰-382.1KB/s(Youtube:不良林), server: 213.183.59.218, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
-      - 阿联酋-305.7KB/s(Youtube:不良林)
-      - 阿联酋-427.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
-      - 阿联酋-305.7KB/s(Youtube:不良林)
-      - 阿联酋-427.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
-      - 阿联酋-305.7KB/s(Youtube:不良林)
-      - 阿联酋-427.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
-      - 阿联酋-305.7KB/s(Youtube:不良林)
-      - 阿联酋-427.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
-      - 阿联酋-305.7KB/s(Youtube:不良林)
-      - 阿联酋-427.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
-      - 阿联酋-305.7KB/s(Youtube:不良林)
-      - 阿联酋-427.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1009.0KB/s(Youtube:不良林)
-      - 阿联酋-305.7KB/s(Youtube:不良林)
-      - 阿联酋-427.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-791.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
