--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林), server: 213.183.53.221, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇳🇱 荷兰-249.8KB/s(Youtube:不良林), server: 213.183.51.172, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇯🇵 日本-176.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 乌克兰-1.07MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇳🇱 荷兰-727.3KB/s(Youtube:不良林), server: 213.183.51.172, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇳🇱 荷兰-466.3KB/s(Youtube:不良林), server: 213.183.51.172, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇳🇱 荷兰-318.4KB/s(Youtube:不良林), server: 213.183.51.172, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇳🇱 荷兰-796.1KB/s(Youtube:不良林), server: 213.183.59.218, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇳🇱 荷兰-347.5KB/s(Youtube:不良林), server: 213.183.59.218, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇳🇱 荷兰-382.1KB/s(Youtube:不良林), server: 213.183.59.218, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇳🇱 荷兰-471.8KB/s(Youtube:不良林), server: 213.183.51.172, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇳🇱 荷兰-667.1KB/s(Youtube:不良林), server: 213.183.51.172, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇷🇺 俄罗斯联邦-211.1KB/s(Youtube:不良林), server: 213.183.53.202, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林), server: 213.183.53.177, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 阿联酋-228.7KB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-314.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.89MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-667.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 阿联酋-228.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-314.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-667.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 阿联酋-228.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-314.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-667.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 阿联酋-228.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-314.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-667.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 阿联酋-228.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-314.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-667.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 阿联酋-228.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-314.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-667.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 阿联酋-228.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-314.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-330.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.1KB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-727.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-466.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-318.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-796.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-347.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-382.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-667.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 阿联酋-228.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-314.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
