--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-200.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.04MB/s(Youtube:不良林), server: kr-cn-relay-2-32v22.dukou.info, port: 3302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-2-32v22.dukou.info, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.81MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.06MB/s(Youtube:不良林), server: hk-route-12369-6.dukou.info, port: 8306, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-6.dukou.info, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-234.1KB/s(Youtube:不良林), server: 213.183.51.172, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇨🇳 中国-4.11MB/s(Youtube:不良林), server: shanghai-router1-892412-jp2.dukou.info, port: 6302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp2.dukou.info, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-247.4KB/s(Youtube:不良林), server: 213.183.51.172, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇨🇳 中国-7.60MB/s(Youtube:不良林), server: sg-cn-relay-7-74812.dukou.info, port: 9307, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-relay-7-74812.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.66MB/s(Youtube:不良林), server: shanghai-router1-892412-jp1.dukou.info, port: 6301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp1.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-172.3KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: tw-cn-hk-relay-2-184a76.dukou.info, port: 5302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: tw-cn-hk-relay-2-184a76.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.64MB/s(Youtube:不良林), server: us-cn-hk-relay-3-49ae82.dukou.info, port: 7303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-3-49ae82.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: hk-route2-azure-hk8.dukou.info, port: 8308, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route2-azure-hk8.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.85MB/s(Youtube:不良林), server: hk-route2-azure-hk8.dukou.info, port: 8308, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route2-azure-hk8.dukou.info, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-776.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.52MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-200.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-234.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-247.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-776.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-200.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-234.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-247.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-776.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-200.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-234.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-247.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-776.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-200.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-234.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-247.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-776.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-200.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-234.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-247.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-776.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-200.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-234.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-247.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-776.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-200.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-234.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-247.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-776.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
